<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="match_parent"
tools:context="gh.com.payswitch.thetellerandroid.ghmobilemoney.GhMobileMoneyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/theteller_networkSpinner"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/theteller_amountTil"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:id="@+id/theteller_amountTV"
                    android:inputType="numberDecimal"
                    android:layout_below="@+id/rave_card1"
                    android:layout_marginBottom="10dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/theteller_phoneTil"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/theteller_phoneEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rave_card1"
                    android:hint="Phone no"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/save_GH_mobile_money"
                android:id="@+id/theteller_saveNumberSwitch"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                style="?PayButtonStyle"
                android:id="@+id/theteller_payButton"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E5E5"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="20dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_saved_phone"
                android:id="@+id/theteller_savedPhonesButton"
                style="?SavedCardButtonStyle"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="35dp"
                android:layout_marginLeft="10dp"
                />

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="12sp"-->
            <!--android:drawablePadding="5dp"-->
            <!--android:id="@+id/theteller_pcidss_compliant_tv"-->
            <!--android:drawableLeft="@drawable/ic_lock_outline_black_24dp"-->
            <!--android:drawableStart="@drawable/ic_lock_outline_black_24dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/pci_dss_compliant"/>-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/powered_by"
                android:textSize="10sp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/theteller_icon"
                android:drawableLeft="@drawable/theteller_icon"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout android:layout_width="match_parent"
        android:orientation="vertical"
        app:behavior_peekHeight="0dp"
        android:id="@+id/theteller_OTPButtomSheet_momo"
        android:clickable="true"
        android:background="#fff"
        app:behavior_hideable="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_height="2dp"
            style="?OTPHeaderStyle"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/otp_icon"
            android:src="@drawable/otp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#333333"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/otp_instructions_tv_momo"
            android:text="@string/enter_your_one_ntime_password_otp"
            android:gravity="center_vertical|center_horizontal"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/theteller_otpTil_momo"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/otp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:drawablePadding="10dp"
                android:id="@+id/theteller_otpEv_momo"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theteller_otpButton_momo"
            style="?OTPButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/enter"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
