<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".card.CardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/theteller_topLay"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:id="@+id/webView_container"
                    android:background="@color/white"
                    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
                    android:layout_height="match_parent">

                    <WebView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/theteller_webview3"/>

                </FrameLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/theteller_cardNoTil"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">

                    <gh.com.payswitch.thetellerandroid.card.CreditCardView
                        android:hint="@string/card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/theteller_cardNoTv"
                        android:layout_gravity="center"/>

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/theteller_cvvExpLay"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dip"
                        android:id="@+id/theteller_cardExpiryTil"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/expiration"
                            android:paddingRight="50dp"
                            android:paddingEnd="50dp"
                            android:id="@+id/theteller_cardExpiryTv"
                            android:inputType="number"
                            android:maxLength="5"
                            android:layout_below="@+id/rave_card1"
                            android:layout_marginBottom="10dp"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dip"
                        android:id="@+id/theteller_cvvTil"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cvc_cvv2"
                            android:inputType="numberPassword"
                            android:maxLength="3"
                            android:id="@+id/theteller_cvvTv"
                            android:imeOptions="actionDone"
                            android:layout_below="@+id/rave_card1"
                            android:layout_marginBottom="10dp"
                            />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/save_card"
                    android:id="@+id/theteller_saveCardSwitch"
                    />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    style="?PayButtonStyle"
                    android:id="@+id/theteller_payButton"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E5E5E5"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="20dp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_saved_card"
                    android:id="@+id/theteller_savedCardButton"
                    style="?SavedCardButtonStyle"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="35dp"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/powered_by"
                    android:textSize="10sp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/theteller_icon"
                    android:drawableLeft="@drawable/theteller_icon"/>

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="12sp"-->
                    <!--android:drawablePadding="5dp"-->
                    <!--android:id="@+id/theteller_pcidss_compliant_tv"-->
                    <!--android:drawableLeft="@drawable/ic_lock_outline_black_24dp"-->
                    <!--android:drawableStart="@drawable/ic_lock_outline_black_24dp"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:text="@string/pci_dss_compliant"/>-->

            </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:background="@color/white"
        android:id="@+id/theteller_VBVBottomSheet"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:layout_height="match_parent">

        <WebView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/theteller_webview"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:background="#372E4C"
            android:visibility="gone"
            android:id="@+id/theteller_progressContainer"
            android:layout_height="match_parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"/>


        </FrameLayout>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>

